apps/qdrant/overlays/homelander/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant
  namespace: qdrant
spec:
  tls:
    - hosts:
        - qdrant.homelander.local
      secretName: qdrant-tls
  rules:
    - host: qdrant.homelander.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qdrant
                port:
                  number: 6333
    - host: qdrant-home.quybits.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qdrant
                port:
                  number: 6333
